# FamilyFinanceManager-CPP

./: CMakeLists.txt  FamilyFinanceManager.sln  FamilyFinanceManager.vcxproj  README.md  run.bat  【实验课件】00-大作业-综合实验-参考题目.pptx
FamilyFi.B12702AD/x64/Debug/: FamilyFinanceManager.exe.recipe  vc143.idb
FamilyFi.B12702AD/x64/Debug/FamilyFi.B12702AD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FamilyFinanceManager.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
data/: expense.csv  income.csv
include/: DisplayHelper.h  ExpenseRecord.h  FinanceManager.h  IncomeRecord.h  InputHelper.h  MenuSystem.h  Record.h  RecordStorage.h  ReportGenerator.h
src/: DisplayHelper.cpp  ExpenseRecord.cpp  FinanceManager.cpp  IncomeRecord.cpp  InputHelper.cpp  MenuSystem.cpp  Record.cpp  RecordStorage.cpp  ReportGenerator.cpp  main.cpp
